# hsrt

./: Makefile  README.md  hsrt.cabal  hsrt.hs
app/: Main.hs
src/: hsrt.hs  main.hs  raytrace.hs
src/hsrt/: renderable.hs  scenereader.hs  test.hs  types.hs
src/hsrt/renderable/: polygon.hs  sphere.hs
