name:                hsrt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/brailsmt/hsrt#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Brailsford
maintainer:          brailsmt@yahoo.com
copyright:           2018 Michael Brailsford
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     HSRT
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , IfElse

executable hsrt
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hsrt
